# libki

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml
cmake/: FindZLIB.cmake
docs/: Doxyfile.in
examples/: CMakeLists.txt
examples/src/: example-dml-module.cpp
include/ki/dml/: Field.h  FieldBase.h  Record.h  exception.h  types.h
include/ki/pclass/: Casters.h  ClassType.h  Enum.h  EnumType.h  HashCalculator.h  PrimitiveType.h  Property.h  PropertyClass.h  PropertyList.h  StaticProperty.h  Type.h  TypeSystem.h  Value.h  VectorProperty.h
include/ki/pclass/types/: ClassType.h  EnumType.h  FloatingPointPrimitiveType.h  IntegralPrimitiveType.h  PrimitiveType.h  StringPrimitiveType.h  Type.h
include/ki/protocol/: Packet.h  exception.h
include/ki/protocol/control/: ClientHello.h  ClientKeepAlive.h  Opcode.h  Ping.h  ServerHello.h  ServerKeepAlive.h  SessionAccept.h  SessionOffer.h
include/ki/protocol/dml/: Message.h  MessageBuilder.h  MessageHeader.h  MessageManager.h  MessageModule.h  MessageTemplate.h  Session.h
include/ki/protocol/net/: ClientDMLSession.h  ClientSession.h  DMLSession.h  PacketHeader.h  Participant.h  ServerDMLSession.h  ServerSession.h  Session.h
include/ki/serialization/: BinarySerializer.h  FileSerializer.h  JsonSerializer.h  SerializerBinary.h  XmlSerializer.h
include/ki/util/: BitStream.h  BitTypes.h  FlagsEnum.h  Serializable.h  ValueBytes.h  exception.h  trace.h  unique.h
src/dml/: CMakeLists.txt  FieldBase.cpp  Record.cpp
src/dml/types/: BytField.cpp  DblField.cpp  FltField.cpp  GidField.cpp  IntField.cpp  ShrtField.cpp  StrField.cpp  UBytField.cpp  UIntField.cpp  UShrtField.cpp  WStrField.cpp
src/pclass/: CMakeLists.txt  ClassType.cpp  Enum.cpp  EnumType.cpp  HashCalculator.cpp  Property.cpp  PropertyClass.cpp  PropertyList.cpp  Type.cpp  TypeSystem.cpp  Value.cpp
src/protocol/: CMakeLists.txt  Packet.cpp
src/protocol/control/: ClientHello.cpp  ClientKeepAlive.cpp  Ping.cpp  ServerHello.cpp  ServerKeepAlive.cpp  SessionAccept.cpp  SessionOffer.cpp
src/protocol/dml/: Message.cpp  MessageBuilder.cpp  MessageHeader.cpp  MessageManager.cpp  MessageModule.cpp  MessageTemplate.cpp  Session.cpp
src/protocol/net/: ClientSession.cpp  DMLSession.cpp  PacketHeader.cpp  Participant.cpp  ServerSession.cpp  Session.cpp
src/serialization/: BinarySerializer.cpp  CMakeLists.txt  FileSerializer.cpp  JsonSerializer.cpp  SerializerBinary.cpp  XmlSerializer.cpp
src/util/: BitStream.cpp  CMakeLists.txt
test/: CMakeLists.txt
test/samples/serialization/: file.json  file.xml  regular.json  regular.xml
test/src/: unit-bitstream.cpp  unit-dml.cpp  unit-pclass.cpp  unit-protocol.cpp  unit-serialization.cpp
